fix: 偶发性获取不到标题

--- a/src/plugins/table-of-content/index.less
+++ b/src/plugins/table-of-content/index.less
@@ -29,5 +29,11 @@
   font-size: clamp(10px, 70%, 100%);
   color: unset;
   max-height: 600px;
-  overflow: scroll;
+  overflow-y: auto;
+  border: none;
+  box-shadow: 0 0 20px -5px rgba(0, 0, 0, 60%);
+
+  .tippy-content {
+    padding: 8px 12px;
+  }
 }
