--- a/src/plugins/table-of-content/index.less
+++ b/src/plugins/table-of-content/index.less
@@ -5,10 +5,6 @@
 }
 
 #show-toc {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: hsl(350, 100%, 88%);
   position: absolute;
   left: -20px;
   top: 50%;
@@ -16,11 +12,20 @@
   transform-origin: top;
   transition: transform 0.2s ease;
   cursor: pointer;
+  min-width: unset;
+  min-height: unset;
 
-  &:hover,
-  &.open {
-    transform: scale(1.2) translateY(-50%);
-    background-color: hsl(350, 100%, 60%);
+  &:not(.fontIcon) {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: hsl(350, 100%, 88%);
+
+    &:hover,
+    &.open {
+      transform: scale(1.2) translateY(-50%);
+      background-color: hsl(350, 100%, 60%);
+    }
   }
 }
 
