fix: toc fontIcon 略微左移一点

--- a/src/plugins/table-of-content/index.less
+++ b/src/plugins/table-of-content/index.less
@@ -15,6 +15,9 @@
   min-width: unset;
   min-height: unset;
 
+  &.fontIcon {
+    margin-left: -8px;
+  }
   &:not(.fontIcon) {
     width: 10px;
     height: 10px;
